--- a/src/app/pages/people-management/people-management.component.html
+++ b/src/app/pages/people-management/people-management.component.html
@@ -1,5 +1,5 @@
 <div class="management-container">
-  <mat-accordion *ngFor="let participant of participants">
+  <mat-accordion>
   <mat-expansion-panel>
     <mat-expansion-panel-header>
       <mat-panel-title>
