--- a/src/app/pages/people-management/people-management.component.html
+++ b/src/app/pages/people-management/people-management.component.html
@@ -1,23 +1,7 @@
 <div class="management-container">
-  <mat-accordion>
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      <mat-panel-title>
-        <div>{{ participant.fullName }} - {{ participant.email }}</div>
-      </mat-panel-title>
-      <div class="button-wrapper">
-        <button mat-icon-button (click)="click($event)">
-          <mat-icon>edit</mat-icon>
-        </button>
-      </div>
-    </mat-expansion-panel-header>
-
-    <div>
-      <p><strong>Role:</strong> {{ participant.role }}</p>
-      <p *ngIf="participant.groupNumber !== undefined">
-        <strong>Group Number:</strong> {{ participant.groupNumber }}
-      </p>
-    </div>
-  </mat-expansion-panel>
-</mat-accordion>
+  <app-participant-item
+    *ngFor="let p of participants"
+    [config]="resolveConfig(p)"
+    [participant]="p"
+  />
 </div>
