--- a/src/app/pages/people-management/participant-item/participant-item.component.html
+++ b/src/app/pages/people-management/participant-item/participant-item.component.html
@@ -5,8 +5,11 @@
         <div>{{ participant.name }} - {{ participant.email }}</div>
       </mat-panel-title>
       <div class="button-wrapper">
-        <button mat-icon-button (click)="click($event)">
+        <button mat-icon-button (click)="edit($event)">
           <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button (click)="delete($event)">
+          <mat-icon>delete</mat-icon>
         </button>
       </div>
     </mat-expansion-panel-header>
