--- a/src/app/pages/people-management/people-management.component.html
+++ b/src/app/pages/people-management/people-management.component.html
@@ -1,3 +1,8 @@
+<div class="mb-4 text-end">
+  <button mat-raised-button color="primary" (click)="openCreateTeacherDialog()">
+    + Створити викладача
+  </button>
+</div>
 <div class="management-container">
   <app-participant-item
     *ngFor="let p of participants"
