--- a/src/app/pages/people-management/modals/user-delete-modal/user-delete-modal.component.html
+++ b/src/app/pages/people-management/modals/user-delete-modal/user-delete-modal.component.html
@@ -1,8 +1,13 @@
-<h2 mat-dialog-title><mat-icon>warning</mat-icon> participant</h2>
+<h2 mat-dialog-title class="d-flex justify-content-center p-2">
+  <div class="title d-flex align-items-center gap-3">
+    <mat-icon class="d-flex align-items-center">warning</mat-icon>
+    participant
+  </div>
+</h2>
 <mat-dialog-content>
-  Delete participant {{data.name}} - {{data.email}}?
+  Delete participant <strong>{{data.name}} - {{data.email}}</strong>?
 </mat-dialog-content>
-<mat-dialog-actions>
-  <button mat-button mat-dialog-close cdkFocusInitial (click)="confirm()">Confirm</button>
-  <button mat-button mat-dialog-close (click)="dismiss()">Dismiss</button>
+<mat-dialog-actions class="p-4">
+  <button mat-button  mat-raised-button color="primary" cdkFocusInitial (click)="confirm()">Confirm</button>
+  <button mat-button (click)="dismiss()">Dismiss</button>
 </mat-dialog-actions>
