header + main + footer

--- a/src/app/pages/people-management/tutors/tutor-management.component.html
+++ b/src/app/pages/people-management/tutors/tutor-management.component.html
@@ -1,4 +1,5 @@
-<div class="mb-4 text-end">
+<div class="content-container">
+  <div class="mb-4 text-end">
   <button mat-raised-button color="primary" (click)="openCreateTeacherDialog()">
     + Створити викладача
   </button>
@@ -9,4 +10,5 @@
     [tutor]="t"
     (onEdit)="saveEdit($event)"
   />
+</div>
 </div>
