--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -10,8 +10,8 @@
 
   <!-- Навігація -->
   <nav class="hide-mobile">
-    <a mat-button routerLink="/dashboard">Головна</a>
-    <a mat-button routerLink="/teachers">Викладачі</a>
+    <a mat-button routerLink="/">Головна</a>
+    <a mat-button routerLink="/manage-participants">Викладачі</a>
     <a mat-button routerLink="/students">Учні</a>
     <a mat-button routerLink="/subjects">Предмети</a>
     <a mat-button routerLink="/homeworks">Домашки</a>
