--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="app-layout">
-  <app-header></app-header>
+  <app-header/>
   <main class="main-content">
     <router-outlet></router-outlet>
   </main>
 
-  <app-footer></app-footer>
+  <app-footer [theme]="location.href.endsWith('/') ? THEMES.DARK : THEMES.LIGHT" />
 </div>
 
