--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer mat-elevation-z4">
+<footer class="footer mat-elevation-z4 {{theme === THEMES.DARK ? 'dark' : ''}}">
   <div class="footer-content">
     <div class="logo-section">
       <h3>Grado</h3>
