--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,7 +1,8 @@
 <div class="landing-wrapper">
-  <div class="stars"></div>
-  <div class="stars2"></div>
-  <div class="stars3"></div>
+  <img src="/assets/stars.svg" alt="star1" class="star star-top-left" />
+  <img src="/assets/stars.svg" alt="star1" class="star star-top-right" />
+  <img src="/assets/stars.svg" alt="star1" class="star star-bottom-left" />
+  <img src="/assets/stars.svg" alt="star1" class="star star-bottom-right" />
 
   <div class="hero-content">
     <h1 class="title mat-display-2">
