--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
     <router-outlet></router-outlet>
   </main>
 
-  <app-footer [theme]="location.href.endsWith('/') ? THEMES.DARK : THEMES.LIGHT" />
+  <app-footer />
 </div>
 
