--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,7 +4,7 @@
     <mat-icon>menu</mat-icon>
   </button>
 
-  <span class="site-title">📚 School Portal</span>
+  <span class="site-title">Grado</span>
 
   <span class="spacer"></span>
 
