--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,15 +1,7 @@
 .footer {
-  background-color: #f5f5f5;
+  background: radial-gradient(ellipse at bottom, #e8f0fe 0%, #ffffff 100%);
   padding: 24px;
   text-align: center;
-}
-
-.footer.dark {
-  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 70%);
-
-  p{
-    color: #f7f7f7;
-  }
 }
 
 .footer-content {
