--- a/src/app/pages/landing/landing.component.css
+++ b/src/app/pages/landing/landing.component.css
@@ -11,6 +11,15 @@
   text-align: center;
 }
 
+.subtitle{
+  display: block;
+  padding: 5px;
+  max-width: fit-content;
+  align-self: center;
+  background: #3f51b5;
+  color: #e8f0fe;
+}
+
 .star {
   position: absolute;
   width: 40px;
@@ -55,6 +64,9 @@
 
 .hero-content {
   z-index: 10;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 20px;
 }
 
