--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -6,8 +6,8 @@
 
   <div class="hero-content">
     <h1 class="title mat-display-2">
-      Start your educational workout with <span class="brand">Grado</span>
+      Просувай свої знання з <span class="brand">Grado</span>
     </h1>
-    <p class="subtitle mat-subheading-1">Knowledge is power – fuel your mind today.</p>
+    <p class="subtitle mat-subheading-1">Рух - це життя, просувай свої знання з нами.</p>
   </div>
 </div>
