--- a/src/app/pages/people-management/head-tutors/modals/user-delete-modal/user-delete-modal.component.html
+++ b/src/app/pages/people-management/head-tutors/modals/user-delete-modal/user-delete-modal.component.html
@@ -1,11 +1,11 @@
 <h2 mat-dialog-title class="d-flex justify-content-center p-2">
   <div class="title d-flex align-items-center gap-3">
     <mat-icon class="d-flex align-items-center">warning</mat-icon>
-    Видалення викладача
+    Видалення Зауча
   </div>
 </h2>
 <mat-dialog-content>
-  Видалити викладача <strong>{{data.name}} - {{data.email}}</strong>?
+ Видалити зауча <strong>{{data.name}} - {{data.email}}</strong>?
 </mat-dialog-content>
 <mat-dialog-actions class="p-4">
   <button mat-button  mat-raised-button color="primary" cdkFocusInitial (click)="confirm()">Підтвердити</button>
