--- a/src/app/pages/people-management/head-tutors/head-tutor-item/head-tutor-item.component.html
+++ b/src/app/pages/people-management/head-tutors/head-tutor-item/head-tutor-item.component.html
@@ -16,7 +16,7 @@
 
     <div>
       <p>
-        <span class="shadow-text">No additional info</span>
+        <span class="shadow-text">Немає додаткової інформації</span>
       </p>
     </div>
   </mat-expansion-panel>
