--- a/src/app/pages/people-management/tutors/tutor-item/tutor-item.component.html
+++ b/src/app/pages/people-management/tutors/tutor-item/tutor-item.component.html
@@ -16,7 +16,7 @@
 
     <div>
       <p>
-        <strong>Subject:</strong> {{tutor.subject}}
+        <strong>Предмет:</strong> {{tutor.subject}}
       </p>
     </div>
   </mat-expansion-panel>
