--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,16 @@
-<div class="app-layout">
-  <app-header/>
-  <main class="main-content">
-    <router-outlet></router-outlet>
-  </main>
+@if (sessionService.userDataLoaded$ | async) {
+  <div class="app-layout" *ngIf="sessionService.userDataLoaded$ | async">
+    <app-header/>
+    <main class="main-content">
+      <router-outlet></router-outlet>
+    </main>
 
-  <app-footer />
-</div>
+    <app-footer />
+  </div>
+} @else {
+  <div style="height: 100vh; display: flex; align-items: center; justify-content: center">
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+  </div>
+}
+
 
