--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -9,7 +9,7 @@
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <mat-form-field appearance="outline" class="full-width">
           <mat-label>Email</mat-label>
-          <input type="email" matInput formControlName="email" placeholder="Ex. pat@example.com">
+          <input type="email" matInput formControlName="username" placeholder="Ex. pat@example.com">
           @if (email?.errors?.['required']) {
             <mat-error>Email is required.</mat-error>
           }
