title and subtitle change

--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -6,8 +6,8 @@
 
   <div class="hero-content">
     <h1 class="title mat-display-2">
-      Просувай свої знання з <span class="brand">Grado</span>
+      Просувай свої можливості з <span class="brand">Grado</span>
     </h1>
-    <p class="subtitle mat-subheading-1">Рух - це життя, просувай свої знання з нами.</p>
+    <p class="subtitle mat-subheading-1">Отримуй винагороди за свої знання.</p>
   </div>
 </div>
