finished with school

--- a/src/app/pages/people-management/head-tutors/head-tutor-item/head-tutor-item.component.html
+++ b/src/app/pages/people-management/head-tutors/head-tutor-item/head-tutor-item.component.html
@@ -2,7 +2,7 @@
     <mat-expansion-panel>
     <mat-expansion-panel-header>
       <mat-panel-title>
-        <div>{{ headTutor.name }} - {{ headTutor.email }}</div>
+        <div>{{ school.name }}</div>
       </mat-panel-title>
       <div class="button-wrapper">
         <button mat-icon-button (click)="edit($event)">
