--- a/src/app/pages/people-management/tutors/modals/upsert-modal/upsert-modal.component.html
+++ b/src/app/pages/people-management/tutors/modals/upsert-modal/upsert-modal.component.html
@@ -4,8 +4,8 @@
   <div class="d-flex flex-column">
     <mat-form-field appearance="fill" class="w-full mb-4">
       <mat-label>ПІБ</mat-label>
-      <input matInput formControlName="name" />
-      <mat-error *ngIf="teacherForm.get('name')?.hasError('required')">
+      <input matInput formControlName="pib" />
+      <mat-error *ngIf="teacherForm.get('pib')?.hasError('required')">
         Введіть ім’я
       </mat-error>
     </mat-form-field>
@@ -18,14 +18,6 @@
       </mat-error>
       <mat-error *ngIf="teacherForm.get('email')?.hasError('email')">
         Невірний формат email
-      </mat-error>
-    </mat-form-field>
-
-    <mat-form-field appearance="fill" class="w-full">
-      <mat-label>Предмет</mat-label>
-      <input matInput formControlName="subject" />
-      <mat-error *ngIf="teacherForm.get('subject')?.hasError('required')">
-        Введіть предмет
       </mat-error>
     </mat-form-field>
   </div>
